kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: python-basic
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: python-basic
    app.kubernetes.io/name: python-basic
    app.kubernetes.io/part-of: python-basic
    app.openshift.io/runtime: python
  name: python-basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-basic
  template:
    metadata:
      labels:
        app: python-basic
    spec:
      containers:
      - name: python-basic
        imagePullPolicy: Always
        image: docker.io/zakriah/python-basic:0.0.99
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
