kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: thermofischer-app
  name: thermofischer
  namespace: thermofischer
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: thermofischer-app
  sessionAffinity: None
  type: ClusterIP
