kustomize/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: python-basic
  name: python-basic
  namespace: thermofischer
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: python-basic
    weight: 100
